--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "mineflayer": "^4.16.0",
-    "express": "^4.19.2",   // <-- REQUIRED
-    "discord.js": "^14.16.3" // <-- REQUIRED if using discord.js
+    "express": "^4.19.2",  
+    "discord.js": "^14.16.3"
   }
 }
+
